# derek-mouse

./: .gitignore  LICENSE  README.md  RELEASE.md  index.html  package-lock.json  package.json  vite.config.ts
scripts/: release.ps1
src/: App.vue  main.ts  types.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json  updater.pubkey
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: clicker.rs  config.rs  input.rs  lib.rs  main.rs  mouse_macro.rs  ocr_engine.rs  opencv_shim.cpp  recorder.rs  screen.rs  tray.rs
src/components/: GlobalHotkeyBar.vue  TitleBar.vue
src/features/clicker/: ClickerPanel.vue
src/features/mouse-macro/: CoordinatePickerWindow.vue  MouseMacroEditorWindow.vue  MouseMacroPanel.vue
src/features/recorder/: RecorderPanel.vue  RecordingEditorWindow.vue
